--- a/public/manual.html
+++ b/public/manual.html
@@ -758,7 +758,8 @@ user.
 	<p>
 	  The purpose of the Sammon map is to obtain a visualization of the samples and hopefully
 	  gain some biological insight. The Sammon map is an alternative to the PCA map. The Sammon
-	  map has the property that samples close to each other remain close after the projection.
+	  map has the property that samples close to each other remain close after the projection
+	  which is not guaranteed by the PCA map.
 	</p>
 
   </section>
