--- a/public/manual.html
+++ b/public/manual.html
@@ -173,7 +173,7 @@
     <p>
       Version 4 of the Amberbio app.
     </p>
-  </div>
+  </section>
 
   <section class="manual" id="privacy">
     <h1><a href="#table-of-contents">Privacy</a></h1>
