--- a/public/manual.html
+++ b/public/manual.html
@@ -734,9 +734,11 @@ user.
         <h1><a href="#table-of-contents">Sammon map</a></h1>
 	<p>
 	  The Sammon map is a projection of the high dimensional samples to a low dimensional space.
-	  The map was invented by J. W. Sammon in 1969. In this app the low dimensional space is two
-	  or three dimensional such that the samples can be visualized. The projection attempts to
-	  preserve the pairwise distances between samples as much as possible. 
+	  The map was invented by Sammon in 1969. (J. W. Sammon jr. A Nonlinear Mapping for Data
+	  Structure Analysis. IEEE Transactions on Computers, vol. C-18, no. 5, pp 401-409, May
+	  1969). In this app the low dimensional space is two or three dimensional such that the
+	  samples can be visualized. The Sammon map attempts to preserve the pairwise distances
+	  between samples as much as possible.
 	</p>
 
 	<p>
