--- a/public/consulting.html
+++ b/public/consulting.html
@@ -44,14 +44,14 @@
 
 	<a class="logo-text" href="/">Amberbio</a>
 	<nav class="header-nav">
-		<a href="/features">Features</a>
-		<a href="/screen-shots">Screen shots</a>
-		<a href="/manual">Manual</a>
-		<a href="/support">Support</a>
-		<a href="/feedback">Feedback</a>
-		<a href="/consulting">Consulting</a>
-		<a href="/about">About us</a>
-		<a href="/contact">Contact</a>
+		<a href="/features.html">Features</a>
+		<a href="/screen-shots.html">Screen shots</a>
+		<a href="/manual.html">Manual</a>
+		<a href="/support.html">Support</a>
+		<a href="/feedback.html">Feedback</a>
+		<a href="/consulting.html">Consulting</a>
+		<a href="/about.html">About us</a>
+		<a href="/contact.html">Contact</a>
 	</nav>
 	
 	<div style="clear: both; height : 0px;"></div>
@@ -62,7 +62,7 @@
 		<h1>Amber Biosciences offers consulting services in bioinformatics and bio-statistics.</h1>
 		<p class="tagline">We work interactively with our customers and take part in their research projects.</p>
 		<p class="tagline">Contact us either at <a href="mailto:info@amberbio.com">info@amberbio.com</a> or personally.</p>
-		<p class="tagline">Contact information can be found at <a href="/contact">Contact</a>.</p>
+		<p class="tagline">Contact information can be found at <a href="/contact.html">Contact</a>.</p>
 	</section>
 
 	<section>
