--- a/public/screen-shots.html
+++ b/public/screen-shots.html
@@ -50,14 +50,14 @@
 
 	<a class="logo-text" href="/">Amberbio</a>
 	<nav class="header-nav">
-		<a href="/features">Features</a>
-		<a href="/screen-shots">Screen shots</a>
-		<a href="/manual">Manual</a>
-		<a href="/support">Support</a>
-		<a href="/feedback">Feedback</a>
-		<a href="/consulting">Consulting</a>
-		<a href="/about">About us</a>
-		<a href="/contact">Contact</a>
+		<a href="/features.html">Features</a>
+		<a href="/screen-shots.html">Screen shots</a>
+		<a href="/manual.html">Manual</a>
+		<a href="/support.html">Support</a>
+		<a href="/feedback.html">Feedback</a>
+		<a href="/consulting.html">Consulting</a>
+		<a href="/about.html">About us</a>
+		<a href="/contact.html">Contact</a>
 	</nav>
 	
 	<div style="clear: both; height : 0px;"></div>
